@@ -7,6 +7,8 @@ Added Public APIs:
                    objectForURIRepresentation:
                    migrateLibraryToBasePath
                    deviceSpeedCategory
+- MLFile:
+  - new selectors: setComputedThumbnailScaledForDevice
 
 Version 2.5
 -----------
